--- a/stacks/gitea/compose.yaml
+++ b/stacks/gitea/compose.yaml
@@ -31,12 +31,12 @@ services:
     depends_on:
       - giteadb
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.gitea.entryPoints: 'https'
-      traefik.http.routers.gitea.middlewares: 'goodbois@file'
-      traefik.http.routers.gitea.rule: 'Host(`git.${domain}`)'
-      traefik.http.routers.gitea.tls.certresolver: 'cloudflare'
-      traefik.http.services.gitea.loadbalancer.server.url: 'http://gitea:3000'
+      traefik.enable: "true"
+      traefik.http.routers.gitea.entryPoints: "https"
+      traefik.http.routers.gitea.middlewares: "goodbois@file"
+      traefik.http.routers.gitea.rule: "Host(`git.${domain}`)"
+      traefik.http.routers.gitea.tls.certresolver: "cloudflare"
+      traefik.http.services.gitea.loadbalancer.server.url: "http://gitea:3000"
   giteadb:
     image: postgres:14
     container_name: gitea_db
