--- a/.github/workflows/validate-stacks.yaml
+++ b/.github/workflows/validate-stacks.yaml
@@ -13,5 +13,5 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
-      - name: Validate stacks
+      - name: Validate Stacks
         run: bash tests/validate_stacks.sh
