--- a/stacks/media/compose.yaml
+++ b/stacks/media/compose.yaml
@@ -23,12 +23,12 @@ services:
     devices:
       - /dev/dri
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.jellyfin.entryPoints: 'https'
-      traefik.http.routers.jellyfin.middlewares: 'goodbois@file'
-      traefik.http.routers.jellyfin.rule: 'Host(`jf.${domain}`)'
-      traefik.http.routers.jellyfin.tls.certresolver: 'cloudflare'
-      traefik.http.services.jellyfin.loadbalancer.server.url: 'http://jellyfin:8096'
+      traefik.enable: "true"
+      traefik.http.routers.jellyfin.entryPoints: "https"
+      traefik.http.routers.jellyfin.middlewares: "goodbois@file"
+      traefik.http.routers.jellyfin.rule: "Host(`jf.${domain}`)"
+      traefik.http.routers.jellyfin.tls.certresolver: "cloudflare"
+      traefik.http.services.jellyfin.loadbalancer.server.url: "http://jellyfin:8096"
   jellyseerr:
     image: fallenbagel/jellyseerr:latest
     container_name: jellyseerr
@@ -48,12 +48,12 @@ services:
     volumes:
       - ${data:-.}/jellyseerr:/app/config/:rw
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.jellyseerr.entryPoints: 'https'
-      traefik.http.routers.jellyseerr.middlewares: 'goodbois@file'
-      traefik.http.routers.jellyseerr.rule: 'Host(`seer.${domain}`)'
-      traefik.http.routers.jellyseerr.tls.certresolver: 'cloudflare'
-      traefik.http.services.jellyseerr.loadbalancer.server.url: 'http://jellyseerr:5055'
+      traefik.enable: "true"
+      traefik.http.routers.jellyseerr.entryPoints: "https"
+      traefik.http.routers.jellyseerr.middlewares: "goodbois@file"
+      traefik.http.routers.jellyseerr.rule: "Host(`seer.${domain}`)"
+      traefik.http.routers.jellyseerr.tls.certresolver: "cloudflare"
+      traefik.http.services.jellyseerr.loadbalancer.server.url: "http://jellyseerr:5055"
   calibre:
     image: lscr.io/linuxserver/calibre-web:latest
     container_name: calibre
@@ -68,9 +68,9 @@ services:
       - ${data:-.}/calibre:/config
       - ${media}/Books:/books
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.calibre.entryPoints: 'https'
-      traefik.http.routers.calibre.middlewares: 'goodbois@file'
-      traefik.http.routers.calibre.rule: 'Host(`books.${domain}`)'
-      traefik.http.routers.calibre.tls.certresolver: 'cloudflare'
-      traefik.http.services.calibre.loadbalancer.server.url: 'http://calibre:8083'
+      traefik.enable: "true"
+      traefik.http.routers.calibre.entryPoints: "https"
+      traefik.http.routers.calibre.middlewares: "goodbois@file"
+      traefik.http.routers.calibre.rule: "Host(`books.${domain}`)"
+      traefik.http.routers.calibre.tls.certresolver: "cloudflare"
+      traefik.http.services.calibre.loadbalancer.server.url: "http://calibre:8083"
