--- a/stacks/paperlessngx/compose.yaml
+++ b/stacks/paperlessngx/compose.yaml
@@ -34,12 +34,12 @@ services:
       - paperlessngx_db
       - paperlessngx_broker
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.paperlessngx.entryPoints: 'https'
-      traefik.http.routers.paperlessngx.middlewares: 'goodbois@file'
-      traefik.http.routers.paperlessngx.rule: 'Host(`paper.${domain}`)'
-      traefik.http.routers.paperlessngx.tls.certresolver: 'cloudflare'
-      traefik.http.services.paperlessngx.loadbalancer.server.url: 'http://paperlessngx:8000'
+      traefik.enable: "true"
+      traefik.http.routers.paperlessngx.entryPoints: "https"
+      traefik.http.routers.paperlessngx.middlewares: "goodbois@file"
+      traefik.http.routers.paperlessngx.rule: "Host(`paper.${domain}`)"
+      traefik.http.routers.paperlessngx.tls.certresolver: "cloudflare"
+      traefik.http.services.paperlessngx.loadbalancer.server.url: "http://paperlessngx:8000"
     volumes:
       - ${data:-.}/app/data:/usr/src/paperless/data
       - ${data:-.}/app/media:/usr/src/paperless/media
