--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -27,16 +27,16 @@ services:
       - ${data:-.}/traefik/acme.json:/acme.json
       - ${data:-.}/logs/traefik:/var/log/traefik:rw
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.traefik.entryPoints: 'https'
-      traefik.http.routers.traefik.rule: 'Host(`tf.${domain}`) || Host(`tf.${local_domain}`)'
-      traefik.http.routers.traefik.tls: 'true'
-      traefik.http.routers.traefik.tls.certresolver: 'cloudflare'
-      traefik.http.routers.traefik.tls.domains[0].main: '${domain}'
-      traefik.http.routers.traefik.tls.domains[0].sans: '*.${domain}'
-      traefik.http.services.traefik.loadbalancer.server.url: 'http://traefik:8080'
-      traefik.http.routers.traefik.middlewares: 'localonly@file'
-      traefik.http.routers.traefik.service: 'api@internal'
+      traefik.enable: "true"
+      traefik.http.routers.traefik.entryPoints: "https"
+      traefik.http.routers.traefik.rule: "Host(`tf.${domain}`) || Host(`tf.${local_domain}`)"
+      traefik.http.routers.traefik.tls: "true"
+      traefik.http.routers.traefik.tls.certresolver: "cloudflare"
+      traefik.http.routers.traefik.tls.domains[0].main: "${domain}"
+      traefik.http.routers.traefik.tls.domains[0].sans: "*.${domain}"
+      traefik.http.services.traefik.loadbalancer.server.url: "http://traefik:8080"
+      traefik.http.routers.traefik.middlewares: "localonly@file"
+      traefik.http.routers.traefik.service: "api@internal"
 
   # Crowdsec configuration
   crowdsec:
@@ -82,14 +82,14 @@ services:
     volumes:
       - ${data:-.}/authelia/config:/config
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.authelia.rule: 'Host(`auth.${domain}`)'
-      traefik.http.routers.authelia.entryPoints: 'https'
-      traefik.http.routers.authelia.tls: 'true'
-      traefik.http.routers.api.middlewares: 'authelia@docker'
-      traefik.http.middlewares.authelia.forwardAuth.address: 'http://authelia:9091/api/authz/forward-auth'
-      traefik.http.middlewares.authelia.forwardAuth.trustForwardHeader: 'true'
-      traefik.http.middlewares.authelia.forwardAuth.authResponseHeaders: 'Remote-User,Remote-Groups,Remote-Email,Remote-Name'
+      traefik.enable: "true"
+      traefik.http.routers.authelia.rule: "Host(`auth.${domain}`)"
+      traefik.http.routers.authelia.entryPoints: "https"
+      traefik.http.routers.authelia.tls: "true"
+      traefik.http.routers.api.middlewares: "authelia@docker"
+      traefik.http.middlewares.authelia.forwardAuth.address: "http://authelia:9091/api/authz/forward-auth"
+      traefik.http.middlewares.authelia.forwardAuth.trustForwardHeader: "true"
+      traefik.http.middlewares.authelia.forwardAuth.authResponseHeaders: "Remote-User,Remote-Groups,Remote-Email,Remote-Name"
   lldap:
     image: lldap/lldap:stable
     container_name: lldap
@@ -99,15 +99,15 @@ services:
       UID: ${uid:-1000}
       GID: ${gid:-1000}
       TZ: ${timezone:-UTC}
-      LLDAP_JWT_SECRET: '${LLDAP_JWT_SECRET}'
-      LLDAP_KEY_SEED: '${LLDAP_KEY_SEED}'
-      LLDAP_LDAP_BASE_DN: 'dc=${second_level_domain},dc=${tld}'
+      LLDAP_JWT_SECRET: "${LLDAP_JWT_SECRET}"
+      LLDAP_KEY_SEED: "${LLDAP_KEY_SEED}"
+      LLDAP_LDAP_BASE_DN: "dc=${second_level_domain},dc=${tld}"
     volumes:
       - ${data:-.}/lldap:/data
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.lldap.rule: 'Host(`lldap.${domain}`)'
-      traefik.http.routers.lldap.middlewares: 'localonly@file'
-      traefik.http.routers.lldap.entryPoints: 'https'
-      traefik.http.routers.lldap.tls: 'true'
+      traefik.enable: "true"
+      traefik.http.routers.lldap.rule: "Host(`lldap.${domain}`)"
+      traefik.http.routers.lldap.middlewares: "localonly@file"
+      traefik.http.routers.lldap.entryPoints: "https"
+      traefik.http.routers.lldap.tls: "true"
       traefik.http.services.lldap.loadbalancer.server.port: 17170
