--- a/stacks/utils/compose.yaml
+++ b/stacks/utils/compose.yaml
@@ -24,11 +24,11 @@ services:
       ## Maximum accepted size for uploads in bytes
       PICSUR_MAX_FILE_SIZE: 128000000
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.picsur.entryPoints: 'https'
-      traefik.http.routers.picsur.rule: 'Host(`ps.${domain}`)'
-      traefik.http.routers.picsur.tls.certresolver: 'cloudflare'
-      traefik.http.services.picsur.loadbalancer.server.url: 'http://picsur:8080'
+      traefik.enable: "true"
+      traefik.http.routers.picsur.entryPoints: "https"
+      traefik.http.routers.picsur.rule: "Host(`ps.${domain}`)"
+      traefik.http.routers.picsur.tls.certresolver: "cloudflare"
+      traefik.http.services.picsur.loadbalancer.server.url: "http://picsur:8080"
   picsur_postgres:
     image: postgres:14-alpine
     container_name: picsur_postgres
@@ -54,12 +54,12 @@ services:
     volumes:
       - ${data:-.}/privatebin:/srv/data
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.privatebin.entryPoints: 'https'
-      traefik.http.routers.privatebin.middlewares: 'goodbois@file'
-      traefik.http.routers.privatebin.rule: 'Host(`pb.${domain}`)'
-      traefik.http.routers.privatebin.tls.certresolver: 'cloudflare'
-      traefik.http.services.privatebin.loadbalancer.server.url: 'http://privatebin:8080'
+      traefik.enable: "true"
+      traefik.http.routers.privatebin.entryPoints: "https"
+      traefik.http.routers.privatebin.middlewares: "goodbois@file"
+      traefik.http.routers.privatebin.rule: "Host(`pb.${domain}`)"
+      traefik.http.routers.privatebin.tls.certresolver: "cloudflare"
+      traefik.http.services.privatebin.loadbalancer.server.url: "http://privatebin:8080"
 
   # Send service
   send:
@@ -84,12 +84,12 @@ services:
     volumes:
       - ${data:-.}/send/app:/uploads
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.send.entryPoints: 'https'
-      traefik.http.routers.send.middlewares: 'goodbois@file'
-      traefik.http.routers.send.rule: 'Host(`send.${domain}`)'
-      traefik.http.routers.send.tls.certresolver: 'cloudflare'
-      traefik.http.services.send.loadbalancer.server.url: 'http://send:1443'
+      traefik.enable: "true"
+      traefik.http.routers.send.entryPoints: "https"
+      traefik.http.routers.send.middlewares: "goodbois@file"
+      traefik.http.routers.send.rule: "Host(`send.${domain}`)"
+      traefik.http.routers.send.tls.certresolver: "cloudflare"
+      traefik.http.services.send.loadbalancer.server.url: "http://send:1443"
   send_redis:
     image: redis:alpine
     container_name: send_redis
@@ -112,9 +112,9 @@ services:
     volumes:
       - ${data:-.}/convertx:/app/data
     labels:
-      traefik.enable: 'true'
-      traefik.http.routers.convertx.entryPoints: 'https'
-      traefik.http.routers.convertx.middlewares: 'goodbois@file'
-      traefik.http.routers.convertx.rule: 'Host(`cx.${domain}`)'
-      traefik.http.routers.convertx.tls.certresolver: 'cloudflare'
-      traefik.http.services.convertx.loadbalancer.server.url: 'http://convertx:3000'
+      traefik.enable: "true"
+      traefik.http.routers.convertx.entryPoints: "https"
+      traefik.http.routers.convertx.middlewares: "goodbois@file"
+      traefik.http.routers.convertx.rule: "Host(`cx.${domain}`)"
+      traefik.http.routers.convertx.tls.certresolver: "cloudflare"
+      traefik.http.services.convertx.loadbalancer.server.url: "http://convertx:3000"
