--- a/stacks/netbootxyz/compose.yaml
+++ b/stacks/netbootxyz/compose.yaml
@@ -3,7 +3,7 @@ networks:
     external: true
 services:
   netbootxyz:
-    image: lscr.io/linuxserver/netbootxyz:latest
+    image: ghcr.io/netbootxyz/netbootxyz
     container_name: netbootxyz
     restart: always
     networks:
@@ -18,6 +18,7 @@ services:
       PUID: ${uid:-1000}
       PGID: ${gid:-1000}
       TZ: ${timezone:-UTC}
+      WEB_APP_PORT: 3000
     ports:
       - "69:69/udp"
     volumes:
