--- a/stacks/n8n/compose.yaml
+++ b/stacks/n8n/compose.yaml
@@ -10,12 +10,12 @@ services:
     restart: always
     environment:
       N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS: true
-      N8N_HOST: n8n.${local_domain}
+      N8N_HOST: n8n.${domain}
       N8N_PORT: 5678
       N8N_PROTOCOL: https
       N8N_RUNNERS_ENABLED: true
       NODE_ENV: production
-      WEBHOOK_URL: https://n8n.${local_domain}/
+      WEBHOOK_URL: https://n8n.${domain}/
       GENERIC_TIMEZONE: ${timezone:-UTC}
       TZ: ${timezone:-UTC}
     networks:
@@ -26,8 +26,8 @@ services:
     labels:
       traefik.enable: "true"
       traefik.http.routers.n8n.entryPoints: "https"
-      traefik.http.routers.n8n.middlewares: "localonly@file,n8n@docker"
-      traefik.http.routers.n8n.rule: "Host(`n8n.${local_domain}`)"
+      traefik.http.routers.n8n.middlewares: "n8n@docker"
+      traefik.http.routers.n8n.rule: "Host(`n8n.${domain}`)"
       traefik.http.routers.n8n.tls.certresolver: "cloudflare"
       traefik.http.services.n8n.loadbalancer.server.url: "http://n8n:5678"
       traefik.http.middlewares.n8n.headers.SSLRedirect: true
@@ -35,6 +35,6 @@ services:
       traefik.http.middlewares.n8n.headers.browserXSSFilter: true
       traefik.http.middlewares.n8n.headers.contentTypeNosniff: true
       traefik.http.middlewares.n8n.headers.forceSTSHeader: true
-      traefik.http.middlewares.n8n.headers.SSLHost: ${local_domain}
+      traefik.http.middlewares.n8n.headers.SSLHost: ${domain}
       traefik.http.middlewares.n8n.headers.STSIncludeSubdomains: true
       traefik.http.middlewares.n8n.headers.STSPreload: true
