--- a/stacks/n8n/example.env
+++ b/stacks/n8n/example.env
@@ -2,7 +2,7 @@
 data=/path/to/host/storage
 
 # Domain settings
-local_domain=localonly.yourdomain.com
+domain=yourdomain.com
 
 # General settings
 timezone=Your/Timezone
