--- a/stacks/n8n/compose.yaml
+++ b/stacks/n8n/compose.yaml
@@ -5,7 +5,7 @@ volumes:
   n8n_config:
 services:
   n8n:
-    image: docker.n8n.io/n8nio/n8n
+    image: docker.n8n.io/n8nio/n8n:latest
     container_name: n8n
     restart: always
     environment:
