--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -40,7 +40,7 @@ services:
 
   # Crowdsec configuration
   crowdsec:
-    image: crowdsecurity/crowdsec
+    image: crowdsecurity/crowdsec:latest
     container_name: crowdsec
     restart: unless-stopped
     depends_on:
@@ -55,7 +55,7 @@ services:
       - ${data:-.}/crowdsec/config:/etc/crowdsec/
       - ${data:-.}/logs/traefik:/var/log/traefik/:ro
   bouncer-traefik:
-    image: docker.io/fbonalair/traefik-crowdsec-bouncer
+    image: docker.io/fbonalair/traefik-crowdsec-bouncer:latest
     container_name: bouncer-traefik
     restart: unless-stopped
     depends_on:
@@ -68,7 +68,7 @@ services:
 
   # Authelia configuration
   authelia:
-    image: authelia/authelia
+    image: authelia/authelia:latest
     container_name: authelia
     restart: unless-stopped
     depends_on:
