allow all images to have a version set

--- a/stacks/docs/example.env
+++ b/stacks/docs/example.env
@@ -10,6 +10,13 @@ uid=1000
 gid=1000
 timezone=Your/Timezone
 
+# Image versions
+bookstack_version=latest
+grafana_version=latest
+mariadb_version=latest
+prometheus_version=latest
+uptimekuma_version=latest
+
 # Bookstack settings
 root_pass="a_secure_db_admin_password"
 db_pass="a_secure_db_admin_password"
