--- a/stacks/garage/example.env
+++ b/stacks/garage/example.env
@@ -7,3 +7,7 @@ local_domain=localonly.yourdomain.com
 
 # General settings
 timezone=Your/Timezone
+
+# Image versions
+garage_version=latest
+garage_webui_version=latest
