--- a/stacks/gitea/example.env
+++ b/stacks/gitea/example.env
@@ -4,6 +4,11 @@ data=/path/to/host/storage
 # Domain settings
 domain=yourdomain.com
 
+# Image versions
+gitea_version=latest
+postgres_version=latest
+runner_version=latest
+
 # Gitea settings
 db_pass="a_secure_db_password"
 token="a_secure_token"
