--- a/stacks/homeassistant/example.env
+++ b/stacks/homeassistant/example.env
@@ -4,3 +4,6 @@ data=/path/to/host/storage
 # Domain settings
 domain=yourdomain.com
 local_domain=localonly.yourdomain.com
+
+# Image versions
+homeassistant_version=latest
