--- a/stacks/media/example.env
+++ b/stacks/media/example.env
@@ -10,3 +10,8 @@ uid=1000
 gid=1000
 umask=000
 timezone=Your/Timezone
+
+# Image versions
+calibre_web_version=latest
+jellyfin_version=latest
+jellyseerr_version=latest
