--- a/stacks/paperlessngx/example.env
+++ b/stacks/paperlessngx/example.env
@@ -9,6 +9,11 @@ uid=1000
 gid=1000
 timezone=Your/Timezone
 
+# Image versions
+keydb_version=latest
+paperlessngx_version=latest
+postgres_version=latest
+
 # Paperlessngx settings
 secret_key='a_long_and_secure_secret'
 client_id='a_long_and_secure_secret'
