--- a/stacks/proxies/example.env
+++ b/stacks/proxies/example.env
@@ -4,6 +4,11 @@ data=/path/to/host/storage
 # General settings
 timezone=Your/Timezone
 
+# Image versions
+gluetun_version=latest
+socks5proxy_version=latest
+tor_privoxy_version=latest
+
 # Gluetun settings
 cities='comma_separated_list_of_cities'
 provider='your_vpn_provider'
