--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -12,6 +12,13 @@ uid=1000
 gid=1000
 timezone=Your/Timezone
 
+# Image versions
+authelia_version=latest
+crowdsec_bouncer_version=latest
+crowdsec_version=latest
+lldap_version=latest
+traefik_verison=latest
+
 # Traefik settings
 email=youremail@example.com
 cf_api_key=some-key1 # generate this key from cloudflare
