--- a/stacks/website/example.env
+++ b/stacks/website/example.env
@@ -10,6 +10,13 @@ timezone=Your/Timezone
 uid=1000
 gid=1000
 
+# Image versions
+copyparty_version=latest
+freshrss_version=latest
+homepage_version=latest
+mywebsite_version=latest
+postgres_version=latest
+
 # Freshrss settings
 DB_PASSWORD='a_secure_db_password'
 
