--- a/stacks/docs/compose.yaml
+++ b/stacks/docs/compose.yaml
@@ -5,7 +5,7 @@ networks:
 services:
   # Wiki service
   bookstack:
-    image: lscr.io/linuxserver/bookstack:latest
+    image: lscr.io/linuxserver/bookstack:${bookstack_version:-latest}
     container_name: bookstack
     restart: unless-stopped
     depends_on:
@@ -36,7 +36,7 @@ services:
       traefik.http.routers.bookstack.tls.certresolver: "cloudflare"
       traefik.http.services.bookstack.loadbalancer.server.url: "http://bookstack:80"
   bookstack_db:
-    image: lscr.io/linuxserver/mariadb:latest
+    image: lscr.io/linuxserver/mariadb:${mariadb_version:-latest}
     container_name: bookstack_db
     restart: unless-stopped
     networks:
@@ -54,7 +54,7 @@ services:
 
   # Metrics service
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:${grafana_version:-latest}
     container_name: grafana
     restart: always
     depends_on:
@@ -77,7 +77,7 @@ services:
       traefik.http.routers.grafana.tls.certresolver: "cloudflare"
       traefik.http.services.grafana.loadbalancer.server.url: "http://grafana:3000"
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:${prometheus_version:-latest}
     container_name: prometheus
     restart: always
     networks:
@@ -95,7 +95,7 @@ services:
 
   # Uptime service
   uptimekuma:
-    image: louislam/uptime-kuma:latest
+    image: louislam/uptime-kuma:${uptimekuma_version:-latest}
     container_name: uptimekuma
     restart: always
     networks:
