--- a/stacks/gitea/compose.yaml
+++ b/stacks/gitea/compose.yaml
@@ -4,7 +4,7 @@ networks:
     external: true
 services:
   gitea:
-    image: gitea/gitea:1.24
+    image: gitea/gitea:${gitea_version:-1.24}
     container_name: gitea
     restart: always
     volumes:
@@ -38,7 +38,7 @@ services:
       traefik.http.routers.gitea.tls.certresolver: "cloudflare"
       traefik.http.services.gitea.loadbalancer.server.url: "http://gitea:3000"
   giteadb:
-    image: postgres:14
+    image: postgres:${postgres_version:-14}
     container_name: gitea_db
     restart: always
     environment:
@@ -50,7 +50,7 @@ services:
     volumes:
       - ${data:-.}/db:/var/lib/postgresql/data
   runner:
-    image: gitea/act_runner:nightly
+    image: gitea/act_runner:${runner_version:-nightly}
     container_name: gitea_runner
     restart: always
     depends_on:
