--- a/stacks/proxies/compose.yaml
+++ b/stacks/proxies/compose.yaml
@@ -4,7 +4,7 @@ networks:
     enable_ipv6: true
 services:
   gluetun-proxy:
-    image: qmcgaw/gluetun:v3.40
+    image: qmcgaw/gluetun:${gluetun_version:-v3.40}
     container_name: gluetun-proxy
     restart: always
     cap_add:
@@ -24,12 +24,12 @@ services:
     volumes:
       - ${data:-.}/gluetun-proxy:/gluetun:rw
   socks5proxy:
-    image: serjs/go-socks5-proxy:latest
+    image: serjs/go-socks5-proxy:${socks5proxy_version:-latest}
     container_name: socks5proxy
     network_mode: service:gluetun-proxy
     restart: always
   tor-privoxy:
-    image: dockage/tor-privoxy:latest
+    image: dockage/tor-privoxy:${tor_privoxy_version:-latest}
     container_name: tor-privoxy
     restart: always
     ports:
