--- a/stacks/syncthing/compose.yaml
+++ b/stacks/syncthing/compose.yaml
@@ -3,7 +3,7 @@ networks:
     external: true
 services:
   syncthing:
-    image: lscr.io/linuxserver/syncthing:latest
+    image: lscr.io/linuxserver/syncthing:${syncthing_version:-latest}
     container_name: syncthing
     restart: always
     network_mode: host
