--- a/stacks/utils/example.env
+++ b/stacks/utils/example.env
@@ -8,6 +8,14 @@ domain=yourdomain.com
 uid=1000
 gid=1000
 
+# Image versions
+send_version=latest
+privatebin_version=latest
+postgres_version=latest
+picsur_version=latest
+redis_version=latest
+convertx_version=latest
+
 # Picsur settings
 picsur_dbpass='a_secure_db_password'
 picsur_adminpass='a_secure_db_admin_password'
