--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -91,7 +91,7 @@ services:
       traefik.http.middlewares.authelia.forwardAuth.trustForwardHeader: "true"
       traefik.http.middlewares.authelia.forwardAuth.authResponseHeaders: "Remote-User,Remote-Groups,Remote-Email,Remote-Name"
   lldap:
-    image: lldap/lldap:$:${lldap_version:-stable}
+    image: lldap/lldap:${lldap_version:-stable}
     container_name: lldap
     networks:
       proxy:
