[Komodo] admin: Write Compose File: update stacks/gitea/compose.yaml

--- a/stacks/gitea/compose.yaml
+++ b/stacks/gitea/compose.yaml
@@ -59,7 +59,7 @@ services:
       default: null
     environment:
       CONFIG_FILE: /config.yaml
-      GITEA_INSTANCE_URL: http://gitea:3000
+      GITEA_INSTANCE_URL: https://git.${domain}/
       GITEA_RUNNER_REGISTRATION_TOKEN: ${token}
       GITEA_RUNNER_NAME: runner
     volumes:
