add labels to gitea runner

--- a/stacks/gitea/compose.yaml
+++ b/stacks/gitea/compose.yaml
@@ -7,14 +7,9 @@ services:
     image: gitea/gitea:${gitea_version:-1.24}
     container_name: gitea
     restart: always
-    volumes:
-      - ${data:-.}/server:/data
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
+    depends_on:
+      - giteadb
     environment:
-      # GITEA__server__ENABLED: true
-      # GITEA__server__HTTP_ADDR: 0.0.0.0
-      # GITEA__server__HTTP_PORT: 3000
       GITEA__server__ROOT_URL: https://git.${domain}/
       GITEA__database__DB_TYPE: postgres
       GITEA__database__HOST: giteadb:5432
@@ -23,13 +18,13 @@ services:
       GITEA__database__PASSWD: ${db_pass}
       GITEA__actions__ENABLED: true
       GITEA__server__DISABLE_SSH: true
-      #GITEA__server__SSH_PORT: 2222
-      #GITEA__server__SSH_LISTEN_PORT: 2222
     networks:
       proxy: null
       default: null
-    depends_on:
-      - giteadb
+    volumes:
+      - ${data:-.}/server:/data
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     labels:
       traefik.enable: "true"
       traefik.http.routers.gitea.entryPoints: "https"
@@ -55,14 +50,17 @@ services:
     restart: always
     depends_on:
       - gitea
-    networks:
-      default: null
     environment:
-      CONFIG_FILE: /config.yaml
       GITEA_INSTANCE_URL: https://git.${domain}/
       GITEA_RUNNER_REGISTRATION_TOKEN: ${token}
-      GITEA_RUNNER_NAME: runner
+      GITEA_RUNNER_NAME: gitea_runner
+      GITEA_RUNNER_LABELS:
+        "docker:docker://data.forgejo.org/oci/node:20-bullseye,\
+        ubuntu-latest:docker://docker.gitea.com/runner-images:ubuntu-latest,\
+        ubuntu-22.04:docker://docker.gitea.com/runner-images:ubuntu-22.04,\
+        ubuntu-20.04:docker://docker.gitea.com/runner-images:ubuntu-20.04"
+    networks:
+      default: null
     volumes:
-      - ${data:-.}/runner/config.yaml:/config.yaml
       - ${data:-.}/runner/data:/data
       - /var/run/docker.sock:/var/run/docker.sock
